# book

./: .env.example  .gitignore  11labs.sh  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Makefile  README.md  claude.md  main.py  main_logging_test.py  main_test.py  main_tts_test.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  test_integration.py
.claude/: agents.json  settings.json  settings.local.json  statusline.sh
.claude/agents/: audit-hook.md  ci-cd-fixer.md  dead-code-remover.md  doc-auditor.md  doc-updater.md  orchestrator.md  test-agent.md  test-auditor.md
.claude/commands/: audit.md  builder.md  doc-update.md  orchestrator.md  remove-dead-code.md
.devcontainer/: Dockerfile  aws-credential-process.sh  check-credentials-hook.sh  credential-watchdog.sh  devcontainer.json  manage-watchdog.sh  post-create.sh  refresh-aws-credentials.sh
.github/workflows/: cd.yml  ci.yml
config/: features.example.yaml
docs/: DESIGN.md  EVAL_GUIDE.md  FEATURE_FLAGS.md  PLANS.md  QUALITY_SCORE.md  SECURITY.md  aws-bedrock-setup.md
docs/design-docs/: core-beliefs.md
docs/exec-plans/: tech-debt-tracker.md
docs/product-specs/: index.md  us-001-fix-chapter-title-bleed.md  us-005-tts-elevenlabs.md  us-007-character-registry.md  us-008-ambiguous-speaker-resolution.md  us-009-junk-section-filtering.md
docs/references/: elevenlabs-reference.md
docs/specs/: ev-001-eval-framework-refactor.md  ev-004-eval-guide.md  ev-005-elevenlabs-tts-evals.md  ev-006-ai-feature-completeness-eval.md  index.md  td-001-character-registry-dedup.md  td-001-junk-section-filtering.md  td-002-cli-config-wiring.md  td-002-multi-pov-narrators.md  td-003-character-registry-dedup.md  td-003-cross-chapter-context.md  td-004-epub-pdf-support.md  td-004-multi-pov-narrators.md  td-005-chapter-by-chapter-parsing-with-flush.md  td-005-cross-chapter-context.md  td-005-integration-test-coverage.md  td-005-loudness-normalisation.md  td-006-epub-pdf-support.md  td-006-loudness-normalisation.md  td-006-ping-pong-speaker-attribution.md  td-006-sqlite-persistence-backend.md  td-007-integration-test-coverage.md  td-007-tts-orchestrator-refactor.md  td-008-cache-static-ai-prompt-instructions.md  td-010-sanitize-segment-text-for-tts.md  td-011-reuse-elevenlabs-designed-voices.md  td-012-move-validation-out-of-config.md  td-014-break-circular-tts-orchestrator-imports.md  td-016-add-get-voices-to-tts-provider-interface.md  td-018-provider-registry-and-config.md  td-019-wire-new-providers-into-workflow.md  td-020-rename-orchestrator-to-builder.md  td-021-move-voice-fetching-out-of-workflow.md  td-023-remove-dead-providers.md  td-027-simplify-feature-flags.md  td-028-mood-tracker-cache-resume.md  td-029-split-elevenlabs-tts-provider-v2-v3.md  tech-debt.md  us-002-character-registry-in-output.md  us-002-trim-output-to-processed-chapters.md  (+38 more)
evals/providers/: bedrock_announcements.py  bedrock_section_parser.py
scripts/: parse_book.py  run_workflow.py  run_workflow_test.py
src/: __init__.py  app.py  audio_generator.py  audio_generator_test.py  chapter_announcer.py  chapter_announcer_test.py  chapter_transcriber.py  chapter_transcriber_test.py  character_registry.py  character_registry_test.py  cli.py  config.py  config_test.py  logging_config.py  logging_config_test.py  segment_grouper.py  segment_grouper_test.py  voice_assignment.py  voice_assignment_test.py
src/ai/: __init__.py  ai.md  ai_provider.py  ai_provider_test.py  anthropic_provider.py  anthropic_provider_test.py  aws_bedrock_provider.py  aws_bedrock_provider_cache_test.py  aws_bedrock_provider_test.py  token_tracker.py  token_tracker_test.py
src/audio/: __init__.py  ambient_generator.py  ambient_generator_test.py  ambient_provider_test.py  (+33 more)
tests/: test_ai_workflow_integration.py  test_workflow_metadata_integration.py
userstories/: 01_RefactorParserLayer.md  02_CharacterRegistry.md  03_AmbiguousSpeakerResolution.md  04_JunkSectionFiltering.md
(+368 files in other folders)
