[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Generate full-cast audiobooks from text files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
elevenlabs = ["elevenlabs>=0.2.0"]
dev = ["pytest>=7.4.0"]

[project.scripts]
audiobook = "main:main"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
pythonpath = ["."]
python_files = ["*_test.py", "test_*.py"]
markers = [
    "integration: hits real external APIs; excluded from default run (deselect with -m 'not integration')",
]
