[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audiobook-generator"
version = "0.1.0"
description = "Generate full-cast audiobooks from text files"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "elevenlabs>=0.2.0",
    "boto3>=1.34.0",
    "beautifulsoup4>=4.12.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "types-requests>=2.31.0",
    "boto3-stubs[essential]>=1.35.0",
]

[project.scripts]
audiobook = "main:main"

[tool.pytest.ini_options]
testpaths = ["src", "tests"]
pythonpath = ["."]
python_files = ["*_test.py", "test_*.py"]
# Exclude eval fixtures from test collection - they are not real tests
norecursedirs = ["src/evals/harness/fixtures"]
markers = [
    "integration: hits real external APIs; excluded from default run (deselect with -m 'not integration')",
]

[tool.ruff]
# Exclude eval fixtures from linting - they contain intentional bugs for eval harnesses
exclude = ["src/evals/harness/fixtures/planted_*.py"]

[tool.ruff.lint]
select = [
    "F",     # pyflakes (F401 unused imports, F811 redefined, etc.)
    "E",     # pycodestyle errors (E402 import not at top of file, etc.)
    "W",     # pycodestyle warnings
    "I",     # isort — enforce import ordering
]
ignore = [
    "E501",  # line too long — not enforced in this codebase
]

[tool.mypy]
# Exclude eval fixtures from type checking - they contain intentional bugs for eval harnesses
exclude = ["src/evals/harness/fixtures/planted_.*\\.py$"]
